jms-core-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jms-core
  name: jms-core
  namespace: ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jms-core
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jms-core
    spec:
      containers:
      - name: jms-core
        image: jumpserver/jms_core:1.5.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8070
          protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 2
            memory: 4Gi
        volumeMounts:
        - name: persistent-storage
          mountPath: /opt/jumpserver/data
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - name: jms-nginx-luna
        image: jumpserver/jms_nginx:1.5.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: persistent-storage
          mountPath: /opt/jumpserver/data
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        
      dnsPolicy: ClusterFirst       
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      volumes:
      # - name: shared-data
      #   emptyDir: {}
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: jms-efs-claim
