jms-guacamole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jms-guacamole
  name: guacamole
  namespace: ops
spec:
  ports:
  - name: jms-guacamole
    port: 8080
    protocol: TCP
  selector:
    app: jms-guacamole
  sessionAffinity: ClientIP
