jms-koko-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jms-koko
  name: koko
  namespace: ops
spec:
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
  - name: ws
    port: 5000
    protocol: TCP
  selector:
    app: jms-koko
  sessionAffinity: ClientIP
